@@ -7,6 +7,7 @@ procps-ng-NEXT
   * pgrep.1: Note that we can only go to 100th of second   issue #376
   * ps: parse --help correctly                             issue #381
   * ps: Add --delimiter option                             issue #118
+  * ps: ps f forest works under pid 1                      issue #102
   * ps.1: cols and collums alias width option              Debian #926361
   * ps.1: Add format equivalents                           Debian #925437
   * slabtop: Increase column width                         Debian #959375
